force-app/main/default/objects/Timeline_Configuration__mdt/fields/Activity_Description_Field__c.field-meta.xml
<CustomField>
    <fullName>Activity_Description_Field__c</fullName>
    <description>Used for Custom Activity Timeline only. Field to be displayed on activity item details.</description>
    <inlineHelpText>Used for Custom Activity Timeline only. Field to be displayed on activity item details.</inlineHelpText>
    <label>Description Field</label>
    <length>150</length>
    <type>Text</type>
</CustomField>