force-app/main/default/objects/Timeline_Configuration__mdt/fields/Activity_Icon__c.field-meta.xml
<CustomField>
    <fullName>Activity_Icon__c</fullName>
    <defaultValue>&quot;standard:default&quot;</defaultValue>
    <description>Only valid for Activity Timeline. The Lightning Design System name of the icon to be used for the object.</description>
    <inlineHelpText>Only valid for Activity Timeline. The Lightning Design System name of the icon.
Names are written in the format &apos;standard:default&apos; where &apos;standard&apos; is the category,
and &apos;default&apos; is the specific icon to be displayed.</inlineHelpText>
    <label>Activity Icon</label>
    <length>150</length>
    <required>true</required>
    <type>Text</type>
</CustomField>