force-app/main/default/objects/Timeline_Configuration__mdt/fields/Activity_Subject_Field__c.field-meta.xml
<CustomField>
    <fullName>Activity_Subject_Field__c</fullName>
    <defaultValue>&quot;Id&quot;</defaultValue>
    <description>Used for Custom Activity Timeline only. Field api name to be used as subject.</description>
    <inlineHelpText>Used for Custom Activity Timeline only. Field api name to be used as subject.</inlineHelpText>
    <label>Subject Field</label>
    <length>150</length>
    <required>true</required>
    <type>Text</type>
</CustomField>