force-app/main/default/objects/Timeline_Configuration__mdt/fields/Display_Activity_Record_Form__c.field-meta.xml
<CustomField>
    <fullName>Display_Activity_Record_Form__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for Custom Activity Timeline only. Use to display fields from object&apos;s compact layout as details (the compact layout corresponds to the fields on the highlights panel at the top of the record).</description>
    <inlineHelpText>Used for Custom Activity Timeline only. Use to display fields from object&apos;s compact layout as details (the compact layout corresponds to the fields on the highlights panel at the top of the record).</inlineHelpText>
    <label>Display Compact Layout</label>
    <type>Checkbox</type>
</CustomField>